playlist hover + padding on links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 Songs</a>
                             </li>
                     </div>
-                    <div class="last3
+                    <div class="last3">
                         <li class="playlist"><a href="#">Playlist</a></li>
                         <li class="japansongs"><a href="#">Japanese Songs</a></li>
                         <li class="summer"><a href="#">Summer 2020</a></li>
