--- a/index.html
+++ b/index.html
@@ -40,33 +40,41 @@
               <li class="radio"><a href="#">Radio</a></li>
               <li class="podcast"><a href="#">Podcast</a></li>
             </div>
+
+            
             <div class="second4">
               <li class="Library"><a href="#">Library </a></li>
-              <li class="recent">
-                <i
-                  class="fa-solid fa-clock-rotate-left"
-                  style="color: #ffffff"
-                ></i>
-                <a href="#"> Recents </a>
-              </li>
-              <li class="album">
-                <i class="fa-solid fa-compact-disc" style="color: #ffffff"></i>
-                <a href="#"> Albums</a>
-              </li>
-              <li class="song">
-                <i class="fa-solid fa-music" style="color: #ffffff"></i>
-                <a href="#"> Songs</a>
-              </li>
+              <div class="second-li">
+                <li class="recent">
+                  <i 
+                    class="fa-solid fa-clock-rotate-left"
+                    style="color: #ffffff"
+                  ></i>
+                  <a href="#"> Recents </a>
+                </li>
+                <li class="album">
+                  <i class="fa-solid fa-compact-disc" style="color: #ffffff"></i>
+                  <a href="#"> Albums</a>
+                </li>
+                <li class="song">
+                  <i class="fa-solid fa-music" style="color: #ffffff"></i>
+                  <a href="#"> Songs</a>
+                </li>
+              </div>
             </div>
+
             <div class="last3">
-              <li class="playlist"><a href="#">Playlist</a></li>
-              <li class="japansongs"><a href="#">Japanese Songs</a></li>
-              <li class="summer"><a href="#">Summer 2020</a></li>
+              <div class="last-li">
+                <li class="playlist"><a href="#">Playlist</a></li>
+                <li class="japansongs"><a href="#">Japanese Songs</a></li>
+                <li class="summer"><a href="#">Summer 2020</a></li>
+              </div>
             </div>
           </ul>
         </nav>
       </div>
     </div>
+
     <section class="main">
       <div class="main-nav">
         <div class="search-container">
@@ -89,14 +97,34 @@
         </div>
       </div>
       <div class="play-song">
-        <h2 class="popular">Popular</h2>
+        <img class="main-img" src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg" alt="fireplace" width="170px" height="190vh">
+        <h2 class="status">Popular</h2>
         <div class="song-nam song-img">
           <h1 class="song-name">Spark Again</h1>
-          <img class="main-img" src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg" alt="fireplace" width="170px" height="190vh">
         </div>
         <h2 class="description">Aimer</h2>
         <button class="play-button">Play</button>
       </div>
+
+    <div class="media-scroller">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+      <img src="cover/cover1.jpg" alt="cover" class="item">
+    </div>
     </section>
+
   </body>
 </html>
