Started bottom play bar

--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
               <li class="podcast"><a href="#">Podcast</a></li>
             </div>
 
-            
             <div class="second4">
               <li class="Library"><a href="#">Library </a></li>
               <div class="second-li">
                 <li class="recent">
-                  <i 
+                  <i
                     class="fa-solid fa-clock-rotate-left"
                     style="color: #ffffff"
                   ></i>
                   <a href="#"> Recents </a>
                 </li>
                 <li class="album">
-                  <i class="fa-solid fa-compact-disc" style="color: #ffffff"></i>
+                  <i
+                    class="fa-solid fa-compact-disc"
+                    style="color: #ffffff"
+                  ></i>
                   <a href="#"> Albums</a>
                 </li>
                 <li class="song">
@@ -97,7 +99,13 @@
         </div>
       </div>
       <div class="play-song">
-        <img class="main-img" src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg" alt="fireplace" width="170px" height="190vh">
+        <img
+          class="main-img"
+          src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
+          alt="fireplace"
+          width="170px"
+          height="190vh"
+        />
         <h2 class="status">Popular</h2>
         <div class="song-nam song-img">
           <h1 class="song-name">Spark Again</h1>
@@ -106,25 +114,32 @@
         <button class="play-button">Play</button>
       </div>
 
-    <div class="media-scroller">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-      <img src="cover/cover1.jpg" alt="cover" class="item">
-    </div>
-    </section>
+      <div class="bottom-play">
+        <h1>Spark Again</h1>
+        <h2>Aimer</h2>
+        <!-- <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt=""> -->
+      </div>
 
+      <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+      </div>
+    </section>
   </body>
 </html>
