Added img, bg-color, width to bottom play bar

--- a/index.html
+++ b/index.html
@@ -114,12 +114,27 @@
         <button class="play-button">Play</button>
       </div>
 
-      <div class="bottom-play">
-        <h1>Spark Again</h1>
-        <h2>Aimer</h2>
-        <!-- <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt=""> -->
+      <div class="bottom-container">
+        <div class="bottom-play">
+          <img
+            class="bottom-img"
+            src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
+            alt="bottom img"
+          />
+          <div class="column">
+            <h1 class="bottom-song-name">Spark Again</h1>
+            <h2 class="bottom-song-descrip">Aimer</h2>
+          </div>
+          <!-- <div class="play-icons">
+            <i class="fa-solid fa-backward"></i>
+            <div class="outer-circle">
+              <div class="inner-circle">
+                <i class="fa-solid fa-play"></i>
+              </div>
+            </div>
+            <i class="fa-solid fa-forward"></i>
+          </div> -->
+        </div>
       </div>
 
       <div class="media-scroller">
