Navigation bar function with more categories - 05

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <!-- Make Navbar -->
     <!-- Make Main Body-->
-    <div class="overlay">
-      <div class="overlay2">
+    <div id="overlay">
+      <div id="overlay2">
         <div class="dots">
           <i class="fa-solid fa-circle-dot" style="color: #ffffff"></i>
           <i class="fa-solid fa-circle-dot" style="color: #ffffff"></i>
@@ -30,10 +30,11 @@
             alt="profile"
             width="100px"
             height="100px"
+            id="profileimg"
           />
-          <h1>Alghi</h1>
+          <h1 id="name">Alghi</h1>
         </div>
-        <nav class="nav">
+        <nav id="nav">
           <ul>
             <div class="first3">
               <li class="discover"><a href="#">Discover</a></li>
@@ -103,8 +104,7 @@
           class="main-img"
           src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
           alt="fireplace"
-          width="170px"
-          height="190vh"
+
         />
         <h2 class="status">Popular</h2>
         <div class="song-nam song-img">
@@ -155,6 +155,61 @@
         <img src="cover/cover1.jpg" alt="cover" class="item" />
         <img src="cover/cover1.jpg" alt="cover" class="item" />
       </div>
+      <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+      </div>
+      <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+      </div>
+      <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="cover" class="item" />
+      </div>
+      
     </section>
   </body>
 </html>
