Play song icons moved + font size changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
           class="main-img"
           src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
           alt="fireplace"
-
         />
         <h2 class="status">Popular</h2>
         <div class="song-nam song-img">
@@ -125,7 +124,7 @@
             <h1 class="bottom-song-name">Spark Again</h1>
             <h2 class="bottom-song-descrip">Aimer</h2>
           </div>
-          <!-- <div class="play-icons">
+          <div class="play-icons">
             <i class="fa-solid fa-backward"></i>
             <div class="outer-circle">
               <div class="inner-circle">
@@ -133,7 +132,7 @@
               </div>
             </div>
             <i class="fa-solid fa-forward"></i>
-          </div> -->
+          </div>
         </div>
       </div>
 
@@ -209,7 +208,6 @@
         <img src="cover/cover1.jpg" alt="cover" class="item" />
         <img src="cover/cover1.jpg" alt="cover" class="item" />
       </div>
-      
     </section>
   </body>
 </html>
