Inner + outer circle of play song icon

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
       <div class="main-nav">
         <div class="search-container">
           <div class="left-icons">
-            <i class="fa-solid fa-magnifying-glass" style="color: #ffffff; font-size: 24px"></i>
+            <i
+              class="fa-solid fa-magnifying-glass"
+              style="color: #ffffff; font-size: 24px"
+            ></i>
             <input class="search-input" type="text" placeholder="Search" />
           </div>
         </div>
