--- a/index.html
+++ b/index.html
@@ -134,77 +134,395 @@
         </div>
       </div>
 
-      <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
+      <!-- <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
       </div>
       <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
       </div>
       <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
       </div>
       <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
-        <img src="cover/cover1.jpg" alt="cover" class="item" />
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+      </div>
+      <div class="media-scroller">
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+        <img src="cover/cover1.jpg" alt="" class="item"/>
+      </div> -->
+
+      <div class="media-scroller col1">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="media-scroller col2">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="media-scroller col3">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="media-scroller col4">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
       </div>
     </section>
   </body>
