trying to  position albums v1

--- a/index.html
+++ b/index.html
@@ -225,7 +225,168 @@
         <img src="cover/cover1.jpg" alt="" class="item"/>
       </div> -->
 
-      <div class="media-scroller col1">
+      <div class="media-scroller col1" id="media-scrol ">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="media-scroller col2" id="media-scrol ">
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 1</h1>
+            <h2>Description 1</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 2</h1>
+            <h2>Description 2</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 3</h1>
+            <h2>Description 3</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 4</h1>
+            <h2>Description 4</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 5</h1>
+            <h2>Description 5</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 6</h1>
+            <h2>Description 6</h2>
+          </div>
+        </div>
+
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 7</h1>
+            <h2>Description 7</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 8</h1>
+            <h2>Description 8</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 9</h1>
+            <h2>Description 9</h2>
+          </div>
+        </div>
+        <div class="item-container">
+          <img src="cover/donda.jpg" alt="" class="item" />
+          <div class="caption">
+            <h1>Title 10</h1>
+            <h2>Description 10</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="media-scroller col3" id="media-scrol ">
         <div class="item-container">
           <img src="cover/donda.jpg" alt="" class="item" />
           <div class="caption">
@@ -300,157 +461,7 @@
         </div>
       </div>
 
-      <div class="media-scroller col2">
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 1</h1>
-            <h2>Description 1</h2>
-          </div>
-        </div>
-
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 2</h1>
-            <h2>Description 2</h2>
-          </div>
-        </div>
-
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 3</h1>
-            <h2>Description 3</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 4</h1>
-            <h2>Description 4</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 5</h1>
-            <h2>Description 5</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 6</h1>
-            <h2>Description 6</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 7</h1>
-            <h2>Description 7</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 8</h1>
-            <h2>Description 8</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 9</h1>
-            <h2>Description 9</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 10</h1>
-            <h2>Description 10</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="media-scroller col3">
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 1</h1>
-            <h2>Description 1</h2>
-          </div>
-        </div>
-
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 2</h1>
-            <h2>Description 2</h2>
-          </div>
-        </div>
-
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 3</h1>
-            <h2>Description 3</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 4</h1>
-            <h2>Description 4</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 5</h1>
-            <h2>Description 5</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 6</h1>
-            <h2>Description 6</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 7</h1>
-            <h2>Description 7</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 8</h1>
-            <h2>Description 8</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 9</h1>
-            <h2>Description 9</h2>
-          </div>
-        </div>
-        <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
-          <div class="caption">
-            <h1>Title 10</h1>
-            <h2>Description 10</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="media-scroller col4">
+      <div class="media-scroller col4" id="media-scrol">
         <div class="item-container">
           <img src="cover/donda.jpg" alt="" class="item" />
           <div class="caption">
