Media scroller img cover changed

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <div class="media-scroller col1" id="media-scrol ">
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 1</h1>
             <h2>Description 1</h2>
@@ -235,7 +235,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 2</h1>
             <h2>Description 2</h2>
@@ -243,7 +243,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 3</h1>
             <h2>Description 3</h2>
@@ -251,7 +251,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 4</h1>
             <h2>Description 4</h2>
@@ -259,7 +259,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 5</h1>
             <h2>Description 5</h2>
@@ -267,7 +267,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 6</h1>
             <h2>Description 6</h2>
@@ -275,7 +275,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 7</h1>
             <h2>Description 7</h2>
@@ -283,7 +283,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 8</h1>
             <h2>Description 8</h2>
@@ -291,7 +291,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 9</h1>
             <h2>Description 9</h2>
@@ -299,7 +299,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 10</h1>
             <h2>Description 10</h2>
@@ -309,7 +309,7 @@
 
       <div class="media-scroller col2" id="media-scrol ">
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 1</h1>
             <h2>Description 1</h2>
@@ -317,7 +317,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 2</h1>
             <h2>Description 2</h2>
@@ -325,7 +325,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 3</h1>
             <h2>Description 3</h2>
@@ -333,7 +333,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 4</h1>
             <h2>Description 4</h2>
@@ -341,7 +341,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 5</h1>
             <h2>Description 5</h2>
@@ -349,7 +349,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 6</h1>
             <h2>Description 6</h2>
@@ -357,28 +357,28 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 7</h1>
             <h2>Description 7</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 8</h1>
             <h2>Description 8</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 9</h1>
             <h2>Description 9</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 10</h1>
             <h2>Description 10</h2>
@@ -388,7 +388,7 @@
 
       <div class="media-scroller col3" id="media-scrol ">
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 1</h1>
             <h2>Description 1</h2>
@@ -396,7 +396,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 2</h1>
             <h2>Description 2</h2>
@@ -404,56 +404,56 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 3</h1>
             <h2>Description 3</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 4</h1>
             <h2>Description 4</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 5</h1>
             <h2>Description 5</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 6</h1>
             <h2>Description 6</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 7</h1>
             <h2>Description 7</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 8</h1>
             <h2>Description 8</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 9</h1>
             <h2>Description 9</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 10</h1>
             <h2>Description 10</h2>
@@ -463,7 +463,7 @@
 
       <div class="media-scroller col4" id="media-scrol">
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 1</h1>
             <h2>Description 1</h2>
@@ -471,7 +471,7 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 2</h1>
             <h2>Description 2</h2>
@@ -479,56 +479,56 @@
         </div>
 
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 3</h1>
             <h2>Description 3</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 4</h1>
             <h2>Description 4</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 5</h1>
             <h2>Description 5</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 6</h1>
             <h2>Description 6</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 7</h1>
             <h2>Description 7</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 8</h1>
             <h2>Description 8</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 9</h1>
             <h2>Description 9</h2>
           </div>
         </div>
         <div class="item-container">
-          <img src="cover/donda.jpg" alt="" class="item" />
+          <img src="cover/kidkudi.jpg" alt="" class="item" />
           <div class="caption">
             <h1>Title 10</h1>
             <h2>Description 10</h2>
