Changed main img + bototm-img + names

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
       <div class="play-song">
         <img
           class="main-img"
-          src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
+          src="images/inter2.jpg"
           alt="fireplace"
         />
         <h2 class="status">Popular</h2>
         <div class="song-nam song-img">
-          <h1 class="song-name">Spark Again</h1>
+          <h1 class="song-name">Intergalatic</h1>
         </div>
-        <h2 class="description">Aimer</h2>
+        <h2 class="description">Astral</h2>
         <button class="play-button">Play</button>
       </div>
 
@@ -115,12 +115,12 @@
         <div class="bottom-play">
           <img
             class="bottom-img"
-            src="https://i.pinimg.com/564x/71/07/86/7107863c0d099c1c924c0fe15eda17ee.jpg"
+            src="images/inter2.jpg"
             alt="bottom img"
           />
           <div class="column">
-            <h1 class="bottom-song-name">Spark Again</h1>
-            <h2 class="bottom-song-descrip">Aimer</h2>
+            <h1 class="bottom-song-name">Intergalatic</h1>
+            <h2 class="bottom-song-descrip">Astral</h2>
           </div>
           <div class="play-icons">
             <i class="fa-solid fa-backward"></i>
